--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,7 +21,10 @@
 header{
     background-color:#FFF8F3;
     padding-top: 50px;
-
+    background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3 ;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
+    
 }
 nav{
     width: 71%;
@@ -53,5 +56,91 @@ nav .menu a{
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
     
+}
+
+#banner{
+    /* border: 2px solid red; */
+    margin: 47px 38px 0 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .banner-content{
+    max-width: 585px;
+}
+#banner .banner-content h2{
+    color: #474747;
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+#banner .banner-content h1{
+    color:#181818 ;
+    font-size: 58px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+#banner .banner-content P{
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+#banner .banner-image{
+    height: 676px;
+    max-width: 584px;
+}   
+#about{
+    padding-top: 130px;
+}
+
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 157px;
+}
+
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+.section-heading h2{
+    color: #181818;
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.section-heading p{
+    font-size: 18px;
+    line-height: 30px;
+    color: #757575;
+    margin-bottom: 30px;
+
+}
+
+
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info .card-info p{
+     font-size: 20px;
+     line-height: 30px;
+     color: #757575;
+     margin-bottom: 2px;
+}
+
+.about-info .card-info h2{
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: bold;
+    color: #474747;
 }
