--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -109,6 +109,7 @@ nav .menu a{
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 .section-heading h2{
     color: #181818;
@@ -143,4 +144,54 @@ nav .menu a{
     line-height: 30px;
     font-weight: bold;
     color: #474747;
+}
+#skills{
+    padding-top: 130px;
+}
+.skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.skills-container .section-heading h2{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    padding-bottom: 30px;
+}
+.skills-container .section-heading p{
+    font-size: 18px;
+    line-height: 30px;
+    color: #757575;
+    padding-bottom: 50px;
+}
+.skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+    
+    
+}
+.skill-card{
+    padding: 30px;
+    /* border: 2px solid red; */
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #00000040;
+}  
+.skill-card img{
+    width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h5{
+    max-width: 174px;
+    color: #181818;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.skill-card p{
+    max-width: 201px;
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+    margin-bottom: 30px;
 }
